--- a/eas.json
+++ b/eas.json
@@ -1,14 +1,21 @@
 {
   "cli": {
-    "version": ">= 3.0.0"
+    "version": ">= 3.0.0",
+    "appVersionSource": "remote"
   },
   "build": {
-    "production": {
+    "production-apk": {
       "releaseChannel": "default",
       "distribution": "store",
       "android": {
-        "buildType": "apk",
-        "gradleCommand": ":app:assembleRelease"
+        "buildType": "apk"
+      }
+    },
+    "production-aab": {
+      "releaseChannel": "default",
+      "distribution": "store",
+      "android": {
+        "buildType": "app-bundle"
       }
     },
     "development": {
